<resources>
    <!--Login-->
    <string name="app_name">ContraseniaProyecto</string>
    <string name="inicioContrasenia">Contraseñas</string>
    <string name="Usuario">Usuario</string>
    <string name="Contrasenia">Contraseña</string>
    <string name="Registrate">¿No te has registrado? Regístrate!!"</string>
    <string name="btnIngresar">Ingresar</string>

    <!--Registro-->
    <string name="Nombre">Nombre</string>
    <string name="Apellido">Apellido</string>
    <string name="Email">Email</string>
    <string name="ConfirmarContrasenia">Confirmar Contraseña</string>
    <string name="PIN">Ingrese su PIN</string>
    <string name="Condiciones">He leído y acepto los Términos y Condiciones</string>
    <string name="btnRegistrar">Registrar</string>
    <string name="IniciarSesion">¿Ya tienes una cuenta? Ingresa!</string>

    <!--Barra de Busqueda-->
    <string name="Buscar">Buscar</string>

    <!--Filtros-->
    <string-array name="filtro_opciones">
        <item>Filtros</item>
        <item>Personal</item>
        <item>Ejecutivo</item>
        <item>Otros</item>
    </string-array>

    <string name="Filtros">Filtros</string>

    <!--Menu-->
    <string name="Contrasenias">Contraseñas</string>
    <string name="Generador">Generador</string>
    <string name="Historial">Historial</string>
    <string name="Configuracion">Configuracion</string>
    <string name="Ayuda">Ayuda</string>
    <string name="CerrarSesion">Cerrar Sesion</string>

    <!--Generador-->
    <string name="eCaracteres">Añadir caracteres especiales</string>
    <string name="mayusculas">Mayúsculas</string>
    <string name="numeros">Añadir números</string>
    <string name="generar">Generar</string>
    <string name="contraseniaGenerada">Contraseña Generada</string>

    <string name="Guardar">Guardar</string>

</resources>
