<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainGuardar"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="38dp"
            android:layout_height="55dp"
            android:layout_marginTop="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.957"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.084"
            app:srcCompat="@drawable/cerrar" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="41dp"
            android:layout_height="51dp"
            android:layout_marginStart="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintBottom_toTopOf="@+id/etNombre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/menublanco" />

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/Nombre"
            android:inputType="text"
            android:padding="12dp"
            android:text="@string/Nombre"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <Spinner
            android:id="@+id/spinnerCategoria"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@android:drawable/btn_dropdown"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etNombre" />

        <EditText
            android:id="@+id/etContrasena"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/Contrasenia"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerCategoria" />

        <ImageView
            android:id="@+id/ivShowPassword1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:src="@android:drawable/ic_menu_view"
            app:layout_constraintBottom_toBottomOf="@+id/etContrasena"
            app:layout_constraintEnd_toEndOf="@+id/etContrasena"
            app:layout_constraintTop_toTopOf="@+id/etContrasena" />

        <EditText
            android:id="@+id/etConfirmarContrasena"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/ConfirmarContrasenia"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etContrasena" />

        <ImageView
            android:id="@+id/ivShowPassword2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:src="@android:drawable/ic_menu_view"
            app:layout_constraintBottom_toBottomOf="@+id/etConfirmarContrasena"
            app:layout_constraintEnd_toEndOf="@+id/etConfirmarContrasena"
            app:layout_constraintTop_toTopOf="@+id/etConfirmarContrasena" />

        <Button
            android:id="@+id/generateButton"
            android:layout_width="341dp"
            android:layout_height="53dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="#2196F3"
            android:text="@string/Guardar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etConfirmarContrasena" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/menuGuardar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/menu" />


</androidx.drawerlayout.widget.DrawerLayout>